# candle

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  Cargo.toml  Makefile  README.md  error_manage.html  index.html  print.html  searchindex.js
candle-core/: Cargo.toml
ebcandle-book/: Cargo.toml
ebcandle-book/src/: README.md  error_manage.md  lib.rs  simplified.rs
ebcandle-book/src/guide/: hello_world.md  installation.md
ebcandle-book/src/inference/: hub.md
ebcandle-book/src/training/: training.md
ebcandle-examples/: Cargo.toml  README.md
ebcandle-examples/examples/: onnx_basics.rs
ebcandle-examples/examples/based/: README.md  main.rs
ebcandle-examples/examples/beit/: README.md  main.rs
ebcandle-examples/examples/bert/: README.md  main.rs
ebcandle-examples/examples/bigcode/: README.md  main.rs
ebcandle-examples/examples/blip/: README.md  main.rs
ebcandle-examples/examples/chatglm/: main.rs
ebcandle-examples/examples/chinese_clip/: main.rs
ebcandle-examples/examples/clip/: README.md  main.rs
ebcandle-examples/examples/codegeex4-9b/: README.org  main.rs
ebcandle-examples/examples/colpali/: main.rs
ebcandle-examples/examples/convmixer/: main.rs
ebcandle-examples/examples/convnext/: README.md  main.rs
ebcandle-examples/examples/custom-ops/: main.rs
ebcandle-examples/examples/depth_anything_v2/: README.md  color_map.rs  main.rs
ebcandle-examples/examples/dinov2/: README.md  main.rs
ebcandle-examples/examples/dinov2reg4/: README.md  main.rs
ebcandle-examples/examples/distilbert/: README.md  main.rs
ebcandle-examples/examples/efficientnet/: main.rs
ebcandle-examples/examples/efficientvit/: README.md  main.rs
ebcandle-examples/examples/encodec/: README.md  main.rs
ebcandle-examples/examples/eva2/: README.md  main.rs
ebcandle-examples/examples/falcon/: README.md  main.rs
ebcandle-examples/examples/fastvit/: README.md  main.rs
ebcandle-examples/examples/flux/: README.md  main.rs
ebcandle-examples/examples/gemma/: README.md  main.rs
ebcandle-examples/examples/glm4/: README.org  main.rs
ebcandle-examples/examples/granite/: README.md  main.rs
ebcandle-examples/examples/gte-qwen/: main.rs
ebcandle-examples/examples/hiera/: README.md  main.rs
ebcandle-examples/examples/jina-bert/: README.md  main.rs
ebcandle-examples/examples/llama/: main.rs
ebcandle-examples/examples/llama2-c/: main.rs  training.rs
ebcandle-examples/examples/llama_multiprocess/: main.rs  model.rs
ebcandle-examples/examples/llava/: image_processor.rs  main.rs  readme.md
ebcandle-examples/examples/mamba/: README.md  main.rs
ebcandle-examples/examples/mamba-minimal/: README.md  main.rs  model.rs
ebcandle-examples/examples/marian-mt/: README.md  main.rs
ebcandle-examples/examples/metavoice/: README.md  main.rs
ebcandle-examples/examples/mimi/: README.md  main.rs
ebcandle-examples/examples/mistral/: README.md  main.rs
ebcandle-examples/examples/mixtral/: README.md  main.rs
ebcandle-examples/examples/mnist-training/: main.rs
ebcandle-examples/examples/mobileclip/: README.md  main.rs
ebcandle-examples/examples/mobilenetv4/: README.md  main.rs
ebcandle-examples/examples/mobileone/: README.md  main.rs
ebcandle-examples/examples/moondream/: README.md  main.rs
ebcandle-examples/examples/musicgen/: main.rs  musicgen_model.rs
ebcandle-examples/examples/olmo/: README.md  main.rs
ebcandle-examples/examples/onnx/: README.md  main.rs
ebcandle-examples/examples/paligemma/: README.md  main.rs
ebcandle-examples/examples/parler-tts/: README.md  main.rs
ebcandle-examples/examples/phi/: README.md  main.rs
ebcandle-examples/examples/pixtral/: README.md  main.rs
ebcandle-examples/examples/quantized/: README.md  main.rs
ebcandle-examples/examples/quantized-phi/: main.rs
ebcandle-examples/examples/quantized-qwen2-instruct/: README.md  main.rs
ebcandle-examples/examples/quantized-t5/: README.md  main.rs
ebcandle-examples/examples/qwen/: README.md  main.rs
ebcandle-examples/examples/recurrent-gemma/: README.md  main.rs
ebcandle-examples/examples/reinforcement-learning/: README.md  ddpg.rs  dqn.rs  gym_env.rs  main.rs  policy_gradient.rs  vec_gym_env.rs
ebcandle-examples/examples/replit-code/: README.md  main.rs
ebcandle-examples/examples/repvgg/: README.md  main.rs
ebcandle-examples/examples/resnet/: README.md  main.rs
ebcandle-examples/examples/rwkv/: README.md  main.rs
ebcandle-examples/examples/segformer/: README.md  main.rs
ebcandle-examples/examples/segment-anything/: README.md  main.rs
ebcandle-examples/examples/siglip/: README.md  main.rs
ebcandle-examples/examples/silero-vad/: main.rs
ebcandle-examples/examples/splade/: README.md  main.rs
ebcandle-examples/examples/stable-diffusion/: README.md  main.rs
ebcandle-examples/examples/stable-diffusion-3/: README.md  clip.rs  main.rs  sampling.rs  vae.rs
ebcandle-examples/src/: audio.rs  imagenet.rs  lib.rs  token_output_stream.rs
ebcandle-nn/: Cargo.toml  README.md
ebcandle-nn/examples/: basic_optimizer.rs  cpu_benchmarks.rs
ebcandle-nn/src/: activation.rs  attention.rs  batch_norm.rs  conv.rs  embedding.rs  encoding.rs  func.rs  group_norm.rs  init.rs  kv_cache.rs  layer_norm.rs  lib.rs  linear.rs  loss.rs  ops.rs  optim.rs  rnn.rs  rope.rs  rotary_emb.rs  sequential.rs  var_builder.rs  var_map.rs
ebcandle-nn/tests/: batch_norm.rs  group_norm.rs  kv_cache.rs  layer_norm.rs  loss.rs  one_hot.rs  ops.rs  optim.rs  rnn.rs  sdpa.rs
ebcandle-onnx/: Cargo.toml  README.md
ebcandle-onnx/src/: eval.rs  lib.rs
ebcandle-onnx/tests/: ops.rs
ebcandle-pyo3/: Cargo.toml  README.md  e5.py  pyproject.toml  quant-llama.py  stub.py  test.py  test_pytorch.py
ebcandle-pyo3/_additional_typing/: README.md  __init__.py
ebcandle-pyo3/src/: lib.rs  onnx.rs  shape.rs  utils.rs
ebcandle-transformers/: Cargo.toml  README.md
ebcandle-transformers/src/: quantized_nn.rs  quantized_var_builder.rs  utils.rs
ebcandle-transformers/tests/: generation_tests.rs  nms_tests.rs
ebcandle-wasm-tests/: Cargo.toml
ebcandle-wasm-tests/tests/: quantized_tests.rs
(+389 files in other folders)
