[package]
name = "ebcandle-nn"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
ebcandle = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
metal = { workspace = true, optional = true }
ebcandle-metal-kernels = { workspace = true, optional = true }
ebcandle-flash-attn = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "ebcandle/accelerate"]
cuda = ["ebcandle/cuda"]
mkl = ["dep:intel-mkl-src", "ebcandle/mkl"]
metal = ["ebcandle/metal", "dep:ebcandle-metal-kernels", "dep:metal"]
flash-attn = ["cuda", "dep:ebcandle-flash-attn"]

[[bench]]
name = "bench_main"
harness = false