[package]
name = "ebcandle-onnx"
version = "0.7.2"
edition = "2021"

description = "ONNX support for Candle"
repository = "https://github.com/huggingface/ebcandle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
ebcandle = { path = "../ebcandle-core", package = "ebcandle-core", version = "0.7.2" }
ebcandle-nn = { path = "../ebcandle-nn", version = "0.7.2" }
prost = "0.12.1"

[build-dependencies]
prost-build = "0.12.1"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
