[package]
name = "ebcandle-transformers"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
ebcandle = { workspace = true }
ebcandle-flash-attn = { workspace = true, optional = true }
ebcandle-nn = { workspace = true }
fancy-regex = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
tracing = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "ebcandle/accelerate", "ebcandle-nn/accelerate"]
cuda = ["ebcandle/cuda", "ebcandle-nn/cuda"]
flash-attn = ["cuda", "dep:ebcandle-flash-attn", "ebcandle-nn/flash-attn"]
mkl = ["dep:intel-mkl-src", "ebcandle/mkl", "ebcandle-nn/mkl"]
metal = ["ebcandle/metal", "ebcandle-nn/metal"]
