[package]
name = "ebcandle-wasm-tests"
version.workspace = true
edition.workspace = true
description = "WASM tests for ebcandle"
keywords.workspace = true
categories.workspace = true

[dependencies]
ebcandle = { workspace = true }
rand = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
